# calendizer

./: .gitignore  LICENSE  README.md  _calendar_model.py  _figure_renderer.py  calendar_model.py  calendize.py  calendizer.py  date_utils.py  figure_renderer.py  go.bat  go_4000x3000.bat  go_4000x3000__right-margin.bat  go_6000x4000.bat  image_size.py  image_sizes.csv.config  main.py  pip.config  pyproject.toml  render_calendar_tables.py  service_auto_dpi_calculator.py  service_image_sizes_reader.py  test.unit.bat  test.unit.one.bat  test_calendize_jpg.bat  test_calendize_png.bat  test_calendize_png_with_options.bat  test_png.bat  test_render_calendar_tables.bat  test_service_auto_dpi_calculator.py  test_usage.bat  test_xxx.bat
