[project]
name = "calendizer"
version = "1.0.3"
description = "Calendizer is a simple Python command line tool that generates a set of calendar-month tables and pastes them onto a given set of 12 photos."
readme = "README.md"
requires-python = ">=3.7.9"
dependencies = [
    "cycler==0.11.0",
    "fonttools==4.28.3",
    "kiwisolver==1.3.2",
    "matplotlib==3.5.0",
    "numpy==1.21.4",
    "packaging==21.3",
    "parameterized>=0.9.0",
    "pillow==8.4.0",
    "pyparsing==3.0.6",
    "six==1.16.0",
    "tomli==1.2.2",
]
