[project]
name = "calendizer"
version = "1.0.3"
description = "Calendizer is a simple Python command line tool that generates a set of calendar-month tables and pastes them onto a given set of 12 photos."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7,<3.9",
    "kiwisolver>=1.4",
    "fonttools>=4.39",
    "packaging>=23",
    "pyparsing>=3.0",
    "cycler>=0.11",
    "pillow>=10",
    "parameterized>=0.9.0",
    "six>=1.16",
]
